--- a/src/app/main/content/contacts/overlay/overlay.component.html
+++ b/src/app/main/content/contacts/overlay/overlay.component.html
@@ -105,7 +105,7 @@
             
             #phoneField="ngModel"
             required
-           pattern="^(\+|0)[1-9\s][0-9\s]{6,14}$"
+           pattern="^(\+|0)[1-9\s][0-9\s]{5,16}$"
           />
           <img
             src="assets/img/icons/call.svg"
@@ -114,7 +114,7 @@
           />
         </div>
         @if ((phoneField.invalid && phoneField.touched) || isValidPhone) {
-        <p class="error-message">Please use + or 0 at the beginning and 6-14 numbers!</p>
+        <p class="error-message">Please use + or 0 at the beginning and 5-18 numbers! (Spaces are included)</p>
         } @else {
         <p></p>
         }
