--- a/src/app/main/content/contacts/overlay/overlay.component.html
+++ b/src/app/main/content/contacts/overlay/overlay.component.html
@@ -105,7 +105,7 @@
             
             #phoneField="ngModel"
             required
-           pattern="^(\+|0)[1-9\s][0-9\s]{5,16}$"
+           pattern="^(\+|0|00)[1-9\s][0-9\s]{5,16}$"
           />
           <img
             src="assets/img/icons/call.svg"
