Simple structures and single-task component added

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -1,1 +1,12 @@
-<p>board works!</p>
+<section>
+  <h2>Lass mich dein Board sein!</h2>
+
+  <div>
+    To do
+    <app-single-task></app-single-task>
+  </div>
+  <div>In progress</div>
+  <div>Await feedback</div>
+  <div>Done</div> 
+  
+</section>
