--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -1,5 +1,4 @@
 <section>
-  <div>links</div>
-  <div>rechts</div>
+  <p>Ich bin eine Aufgabe!</p>
   <button (click)="test()">TEST</button>
 </section>
