add-task component prepaired

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -1,5 +1,13 @@
 <section>
-  <div>links</div>
-  <div>rechts</div>
+  <div class="head-section">
+    <h1>Add Task</h1>
+    <img src="assets/img/icons/close.svg" alt="">
+  </div>
+
+  <form>
+    <div>links</div>
+    <div></div>
+    <div>rechts</div>
+  </form>
   <button (click)="test()">TEST</button>
 </section>
