scss style started

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -1,11 +1,19 @@
 <section>
   <div class="head-section">
     <h1>Add Task</h1>
-    <img src="assets/img/icons/close.svg" alt="">
+    <img class="close" src="assets/img/icons/close.svg" alt="Closing Image">
   </div>
 
   <form>
-    <div>links</div>
+    <div class="content">
+      <div class="title">
+        <label for="title">Title<span>*</span></label>
+        <input type="text">
+      </div>
+    </div>
+
+
+
     <div></div>
     <div>rechts</div>
   </form>
