--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -24,6 +24,7 @@ $dark_blue: rgba(42, 54, 71, 1);
 $light_blue: rgba(41, 171, 226, 1);
 $blue: rgba(0, 124, 238, 1);
 $button_hover_blue: rgba(42, 61, 89, 1);
+$red: rgba(255, 129, 144, 1);
 
 /* bg color for each section */
 $cream_white: #f6f7f8;
