--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -15,6 +15,12 @@ $bright_yellow: rgba(255, 199, 1, 1); // Bright Yellow
 $green_light: rgba(195, 255, 43, 1); // Light Green
 $yellow_bright: rgba(255, 230, 43, 1); // Bright Yellow 2
 
+$darker_orange: rgba(255, 122, 0, 1);
+$special_red: rgba(255, 61, 0, 1);
+$light_green: rgba(122, 226, 41, 1);
+
+
+
 /* color for fonts & bg color buttons */
 $black: rgba(0, 0, 0, 1);
 $white: rgba(255, 255, 255, 1);
