--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -1,21 +1,68 @@
 <section>
   <div class="head-section">
     <h1>Add Task</h1>
-    <img class="close" src="assets/img/icons/close.svg" alt="Closing Image">
+    <img class="close" src="assets/img/icons/close.svg" alt="Closing Image" />
   </div>
 
   <form>
     <div class="content">
       <div class="title">
         <label for="title">Title<span>*</span></label>
-        <input type="text">
+        <input type="text" />
       </div>
     </div>
 
-
-
     <div></div>
-    <div class="right"> </div>
+    <div class="right">
+      <div class="choice">
+        <label for="dueDate">Due date<span>*</span></label>
+        <input type="date" id="dueDate" name="dueDate" />
+      </div>
+
+      <div class="choice">
+        <label>Prio</label>
+        <div>
+          <button
+            type="button"
+            (click)="setPriority('high')"
+            [class.selectedHigh]="prio === 'high'"
+          >
+            Urgent
+            <div></div>
+          </button>
+
+          <button
+            type="button"
+            (click)="setPriority('medium')"
+            [class.selectedMedium]="prio === 'medium'"
+          >
+            Medium
+            <div></div>
+          </button>
+          <button
+            type="button"
+            (click)="setPriority('low')"
+            [class.selectedLow]="prio === 'low'"
+          >
+            Low
+            <div></div>
+          </button>
+        </div>
+      </div>
+
+      <div class="choice">
+        <label for="taskType">Category<span>*</span></label>
+        <select id="taskType" name="taskType">
+          <option value="userStory">User Story</option>
+          <option value="technicalTask">Technical Task</option>
+        </select>
+      </div>
+
+      <div class="choice">
+        <label for="subtasks">Subtasks</label>
+        <input type="text" id="subtasks" name="subtasks" />
+      </div>
+    </div>
   </form>
   <button (click)="test()">TEST</button>
 </section>
