added: board header & content html + scss

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -2,6 +2,7 @@
   <div class="board_header">
     <div class="board_header_left">
       <h1>Board</h1>
+      <app-single-task></app-single-task>
     </div>
     <div class="board_header_right">
       <input type="text">
@@ -10,7 +11,7 @@
   </div>
   <div class="board_content">
       <div class="to_do">
-        <div class="board_section_header">
+        <div class="board_content_header">
           <h2>To do</h2>
           <button class="to_do_add_btn"></button>
           <div class="tasks_content">
@@ -19,7 +20,7 @@
         </div>
       </div>
       <div class="in_progress">
-        <div class="board_section_header">
+        <div class="board_content_header">
           <h2>In progress</h2>
           <button class="in_progress_add_btn"></button>
         </div>
@@ -28,7 +29,7 @@
         </div>
       </div>
       <div class="await_feedback">
-        <div class="board_section_header">
+        <div class="board_content_header">
           <h2>Await feedback</h2>
           <button class="await_feedback_add_btn"></button>
         </div>
@@ -37,7 +38,7 @@
         </div>
       </div>
       <div class="done">
-        <div class="board_section_header">
+        <div class="board_content_header">
           <h2>Done</h2>
           <button class="done_add_btn"></button>
         </div>
