--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -6,10 +6,22 @@
 
   <form>
     <div class="content">
-      <div class="title">
-        <label for="title">Title<span>*</span></label>
-        <input type="text" />
+      <div class="title_field">
+        <label class="title" name="title">Title<span>*</span></label>
+        <input class="input" type="text" name="input" placeholder="Enter a title">
       </div>
+
+      <div class="description_field">
+        <label class="description" name="description">Description</label>
+        <textarea class="input" type="text" name="input" placeholder="Enter a Description"></textarea>
+      </div>
+
+      <div>
+        <select name="" id=""></select>
+
+      </div>
+
+
     </div>
 
     <div></div>
