--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -2,10 +2,13 @@
 
 section {
     box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
+    padding-left: 50px;
 }
 
 .head-section {
     @include dFlex($jc: space-between);
+    padding-top: 80px;
+    padding-bottom: 30px;
 
     h1 {
         @include font($fs: 61px, $fw: 700);
@@ -21,34 +24,76 @@ section {
 // }
 
 .content {
+    @include dFlex($ai: flex-start, $g: 50px);
+    flex-direction: column;
 
-    .title {
-        @include dFlex($ai: flex-start);
+    .title_field {
+        @include dFlex($ai: flex-start, $g: 10px);
         flex-direction: column;
+        width: 440px;
 
-        span {
-            color: $red;
+        .title {
+            @include font($fs: 20px, $fw: 400);
+            height: 24px;
+
+            span {
+                color: $red;
+            }
+        }
+
+        .input {
+            border: 1px solid;
+            border-color: $light_gray;
+            border-radius: 10px;
+            height: 48px;
+            width: 100%;
+
+            &::placeholder {
+                @include font($fs: 20px, $fw: 400);
+                color: $light_gray;
+                padding-top: 12px;
+                padding-left: 21px;
+            }
         }
     }
 
+    .description_field {
+        @include dFlex($ai: flex-start, $g: 10px);
+        flex-direction: column;
+        width: 440px;
+
+        .title {
+            @include font($fs: 20px, $fw: 400);
+            height: 24px;
+
+            >span {
+                color: $red;
+            }
+
+        }
+
+        .input {
+            border: 1px solid;
+            border-color: $light_gray;
+            border-radius: 10px;
+            height: 120px;
+            width: 100%;
+
+            &::placeholder {
+                @include font($fs: 20px, $fw: 400);
+                color: $light_gray;
+                padding-top: 18px;
+                padding-left: 16px;
+            }
+        }
+    }
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-.choice{
+.choice {
     @include dFlex($ai: flex-start);
     flex-direction: column;
+
     span {
         color: $red;
     }
@@ -58,18 +103,18 @@ section {
 
 
 
-.selectedHigh{
+.selectedHigh {
     background: $special_red;
     color: $white;
 }
 
 
-.selectedMedium{
+.selectedMedium {
     background: $darker_orange;
     color: $white;
 }
 
-.selectedLow{
+.selectedLow {
     background: $light_green;
     color: $white;
 }
