added: board html + scss

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -5,7 +5,11 @@
       <app-single-task></app-single-task>
     </div>
     <div class="board_header_right">
-      <input type="text">
+      <div class="input_field">
+        <input type="text" placeholder="Find task..">
+        <img class="search_btn" src="./assets/img/icons/search_icon.svg" alt="">
+      </div>
+      
     <button>Add task <img src="./assets/img/icons/plus_icon.svg" alt=""></button>
     </div>
   </div>
