add-task scss changes

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -16,8 +16,16 @@
         <textarea class="input" type="text" name="input" placeholder="Enter a Description"></textarea>
       </div>
 
-      <div>
-        <select name="" id=""></select>
+      <div class="assigned_field">
+        <select class="title" name="assigned_field" id="assigned_field">
+          <option value="">Select contacts to assign</option>
+          <option value="dog">Dog</option>
+          <option value="cat">Cat</option>
+          <option value="hamster">Hamster</option>
+          <option value="parrot">Parrot</option>
+          <option value="spider">Spider</option>
+          <option value="goldfish">Goldfish</option>
+        </select>
 
       </div>
 
