--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -1,93 +1,111 @@
 @import "./../../../../styles.scss";
 
 section {
-  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
-  padding: 0 50px;
+    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
+    padding: 0 50px;
 }
 
 .head-section {
-  @include dFlex($jc: space-between);
-  padding-top: 80px;
-  padding-bottom: 30px;
+    @include dFlex($jc: space-between);
+    padding-top: 80px;
+    padding-bottom: 30px;
 
-  h1 {
-    @include font($fs: 61px, $fw: 700);
-  }
+    h1 {
+        @include font($fs: 61px, $fw: 700);
+    }
 
-  .close {
-    display: none;
-  }
+    .close {
+        display: none;
+    }
 }
 
 .content {
-  @include dFlex($ai: flex-start, $g: 50px);
-  flex-direction: column;
-
-  .title_field {
-    @include dFlex($ai: flex-start, $g: 10px);
+    @include dFlex($ai: flex-start, $g: 50px);
     flex-direction: column;
-    width: 440px;
 
-    .title {
-      @include font($fs: 20px, $fw: 400);
-      height: 24px;
+    .title_field {
+        @include dFlex($ai: flex-start, $g: 10px);
+        flex-direction: column;
+        width: 440px;
 
-      span {
-        color: $red;
-      }
+        .title {
+            @include font($fs: 20px, $fw: 400);
+            height: 24px;
+
+            span {
+                color: $red;
+            }
+        }
+
+        .input {
+            border: 1px solid;
+            border-color: $light_gray;
+            border-radius: 10px;
+            height: 48px;
+            width: 100%;
+
+            &::placeholder {
+                @include font($fs: 20px, $fw: 400);
+                color: $light_gray;
+                padding-top: 12px;
+                padding-left: 21px;
+            }
+        }
+
     }
 
-    .input {
-      border: 1px solid;
-      border-color: $light_gray;
-      border-radius: 10px;
-      height: 48px;
-      width: 100%;
+    .description_field {
+        @include dFlex($ai: flex-start, $g: 10px);
+        flex-direction: column;
+        width: 440px;
 
-      &::placeholder {
-        @include font($fs: 20px, $fw: 400);
-        color: $light_gray;
-        padding-top: 12px;
-        padding-left: 21px;
-      }
+        .title {
+            @include font($fs: 20px, $fw: 400);
+            height: 24px;
+
+            >span {
+                color: $red;
+            }
+        }
+
+        .input {
+            border: 1px solid;
+            border-color: $light_gray;
+            border-radius: 10px;
+            height: 120px;
+            width: 100%;
+
+            &::placeholder {
+                @include font($fs: 20px, $fw: 400);
+                color: $light_gray;
+                padding-top: 18px;
+                padding-left: 16px;
+            }
+        }
     }
 
-  }
+    .assigned_field {
+        @include dFlex($ai: flex-start, $g: 10px);
+        flex-direction: column;
+        width: 440px;
 
-  .description_field {
-    @include dFlex($ai: flex-start, $g: 10px);
-    flex-direction: column;
-    width: 440px;
-
-    .title {
-      @include font($fs: 20px, $fw: 400);
-      height: 24px;
-
-      > span {
-        color: $red;
-      }
+        .title {
+            @include font($fs: 20px, $fw: 400);
+            height: 48px;
+            width: 100%;
+            border: 1px solid;
+            border-color: $light_gray;
+            border-radius: 10px;
+            padding-right: 10px;
+        }
     }
-
-    .input {
-      border: 1px solid;
-      border-color: $light_gray;
-      border-radius: 10px;
-      height: 120px;
-      width: 100%;
-
-      &::placeholder {
-        @include font($fs: 20px, $fw: 400);
-        color: $light_gray;
-        padding-top: 18px;
-        padding-left: 16px;
-      }
-    }
-  }
 }
 
+
+
 .right {
-  @include dFlex($ai: flex-start, $g: 16px);
-  flex-direction: column;
+    @include dFlex($ai: flex-start, $g: 16px);
+    flex-direction: column;
 }
 
 // .date-input {
@@ -104,9 +122,8 @@ section {
 // }
 
 .date-input input {
-  background: url("./../../../../assets/img/icons/add_task.svg") no-repeat right
-    10px center;
-  background-size: 20px;
+    background: url("./../../../../assets/img/icons/add_task.svg") no-repeat right 10px center;
+    background-size: 20px;
 
 
     .assigned_field {
@@ -123,40 +140,38 @@ section {
             border-radius: 10px;
             padding-right: 10px;
         }
-
-
     }
 }
 
 
 .choice {
-  @include dFlex($ai: flex-start);
-  flex-direction: column;
+    @include dFlex($ai: flex-start);
+    flex-direction: column;
 
-  label{
-    font-size: 20px;
-  }
-
-  span {
-    color: $red;
-  }
-
-  input {
-    border: 1px solid;
-    border-color: $light_gray;
-    border-radius: 10px;
-    height: 48px;
-    width: 100%;
-
-    &::placeholder {
-      @include font($fs: 20px, $fw: 400);
-      color: $light_gray;
-      padding-top: 18px;
-      padding-left: 16px;
+    label {
+        font-size: 20px;
     }
-  }
 
-  width: 100%;
+    span {
+        color: $red;
+    }
+
+    input {
+        border: 1px solid;
+        border-color: $light_gray;
+        border-radius: 10px;
+        height: 48px;
+        width: 100%;
+
+        &::placeholder {
+            @include font($fs: 20px, $fw: 400);
+            color: $light_gray;
+            padding-top: 18px;
+            padding-left: 16px;
+        }
+    }
+
+    width: 100%;
 }
 
 .btn-prio {
@@ -168,22 +183,22 @@ section {
     cursor: pointer;
     background: $white;
     box-shadow: 0px 0px 7px 4px rgba($black, 0.1);
-  }
+}
 
 .selectedHigh {
-  background: $special_red;
-  color: $white;
-  font-weight: 700;
+    background: $special_red;
+    color: $white;
+    font-weight: 700;
 }
 
 .selectedMedium {
-  background: $darker_orange;
-  color: $white;
-  font-weight: 700;
+    background: $darker_orange;
+    color: $white;
+    font-weight: 700;
 }
 
 .selectedLow {
-  background: $light_green;
-  color: $white;
-  font-weight: 700;
+    background: $light_green;
+    color: $white;
+    font-weight: 700;
 }
