--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -7,10 +7,11 @@
       </div>
 
       <h1>CSS Architecture Planning</h1>
-      <p class="description">Define CSS naming conventions.</p>
+      <p class="description">Define CSS naming conventions and structure.</p>
 
       <div class="info">
         <p>Due date: 19/02/2024</p>
+        <br />
         <p>Priority: Medium <span class="priority-icon"></span></p>
       </div>
 
@@ -18,19 +19,32 @@
         <p>Assigned To:</p>
         <div class="assignees">
           <div class="assignee">
-            <span class="profile-pic">EM</span> Emmanuel Mauer
+            <img src="assets/img/icons/user_profile_initials.svg" alt="Profile Icon" class="profile-pic">
+            <p class="assignee-name">Sofia Müller</p>
           </div>
         </div>
       </div>
 
       <div class="subtasks">
-        <p>Subtasks:</p>
+        <p>Subtasks</p>
+        <br />
         <div class="subtask"><input type="checkbox" /> Setup base styles</div>
       </div>
 
       <div class="actions">
-        <button class="delete-btn">Delete</button>
-        <button class="edit-btn">Edit</button>
+        <button class="delete-btn">
+          <img
+            src="assets/img/icons/trash_icon.svg"
+            alt="Delete Icon"
+            class="icon"
+          />
+          Delete
+        </button>
+        <span class="divider"></span>
+        <button class="edit-btn">
+          <img src="assets/img/icons/pencil_icon.svg" alt="Edit Icon" class="icon" />
+          Edit
+        </button>
       </div>
     </div>
   </div>
