--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -5,84 +5,105 @@
   </div>
 
   <form>
-    <div class="content">
-      <div class="title_field">
-        <label class="title" name="title">Title<span>*</span></label>
-        <input class="input" type="text" name="input" placeholder="Enter a title">
-      </div>
+    <div class="fill-in-area">
+      <div class="content">
+        <div class="title_field">
+          <label class="title" name="title">Title<span>*</span></label>
+          <input
+            class="input"
+            type="text"
+            name="input"
+            placeholder="Enter a title"
+          />
+        </div>
 
-      <div class="description_field">
-        <label class="description" name="description">Description</label>
-        <textarea class="input" type="text" name="input" placeholder="Enter a Description"></textarea>
-      </div>
+        <div class="description_field">
+          <label class="description" name="description">Description</label>
+          <textarea
+            class="input"
+            type="text"
+            name="input"
+            placeholder="Enter a Description"
+          ></textarea>
+        </div>
 
-      <div class="assigned_field">
-        <select class="title" name="assigned_field" id="assigned_field">
-          <option value="">Select contacts to assign</option>
-          <option value="dog">Dog</option>
-          <option value="cat">Cat</option>
-          <option value="hamster">Hamster</option>
-          <option value="parrot">Parrot</option>
-          <option value="spider">Spider</option>
-          <option value="goldfish">Goldfish</option>
-        </select>
-
-      </div>
-
-
-    </div>
-
-    <div></div>
-    <div class="right">
-      <div class="choice date-input">
-        <label for="dueDate">Due date<span>*</span></label>
-        <input type="date" id="dueDate" name="dueDate" />        
-      </div>
-
-      <div class="choice">
-        <label>Prio</label>
-        <div>
-          <button class="btn-prio"
-            type="button"
-            (click)="setPriority('high')"
-            [class.selectedHigh]="prio === 'high'"
-          >
-            Urgent
-            <div></div>
-          </button>
-
-          <button class="btn-prio"
-            type="button"
-            (click)="setPriority('medium')"
-            [class.selectedMedium]="prio === 'medium'"
-          >
-            Medium
-            <div></div>
-          </button>
-          <button class="btn-prio"
-            type="button"
-            (click)="setPriority('low')"
-            [class.selectedLow]="prio === 'low'"
-          >
-            Low
-            <div></div>
-          </button>
+        <div class="assigned_field">
+          <select class="title" name="assigned_field" id="assigned_field">
+            <option value="">Select contacts to assign</option>
+            <option value="dog">Dog</option>
+            <option value="cat">Cat</option>
+            <option value="hamster">Hamster</option>
+            <option value="parrot">Parrot</option>
+            <option value="spider">Spider</option>
+            <option value="goldfish">Goldfish</option>
+          </select>
         </div>
       </div>
 
-      <div class="choice">
-        <label for="taskType">Category<span>*</span></label>
-        <select id="taskType" name="taskType">
-          <option value="userStory">User Story</option>
-          <option value="technicalTask">Technical Task</option>
-        </select>
-      </div>
+      <div class="line"></div>
 
-      <div class="choice">
-        <label for="subtasks">Subtasks</label>
-        <input type="text" id="subtasks" name="subtasks" />
+      <div class="right">
+        <div class="choice date-input">
+          <label for="dueDate">Due date<span>*</span></label>
+          <input type="date" id="dueDate" name="dueDate" />
+        </div>
+
+        <div class="choice">
+          <label>Prio</label>
+          <div class="btn-section">
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('high')"
+              [class.selectedHigh]="prio === 'high'"
+            >
+              Urgent
+              <div></div>
+            </button>
+
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('medium')"
+              [class.selectedMedium]="prio === 'medium'"
+            >
+              Medium
+              <div></div>
+            </button>
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('low')"
+              [class.selectedLow]="prio === 'low'"
+            >
+              Low
+              <div></div>
+            </button>
+          </div>
+        </div>
+
+        <div class="choice">
+          <label for="taskType">Category<span>*</span></label>
+          <select id="taskType" name="taskType">
+            <option value="userStory">User Story</option>
+            <option value="technicalTask">Technical Task</option>
+          </select>
+        </div>
+
+        <div class="choice">
+          <label for="subtasks">Subtasks</label>
+          <input type="text" id="subtasks" name="subtasks" />
+        </div>
+      </div>
+    </div>
+
+    <div class="submit-section">
+      <p>Pflichtfeld</p>
+
+      <div>
+        <button (click)="test()">TEST</button>
+        <button (click)="test()">TEST</button>
       </div>
     </div>
   </form>
-  <button (click)="test()">TEST</button>
 </section>
