--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -1,204 +1,219 @@
 @import "./../../../../styles.scss";
 
 section {
-    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
-    padding: 0 50px;
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
+  padding: 0  70px;
+  max-height: calc(100vh - 91px);
+  min-height: 770px;
+}
+
+form {
+    @include dFlex($jc: space-between);
+  flex-direction: column;
+  height: 60vh;
+
+}
+
+.fill-in-area {
+  @include dFlex($jc: space-between);
+  width: 100%;
+  
 }
 
 .head-section {
-    @include dFlex($jc: space-between);
-    padding-top: 80px;
-    padding-bottom: 30px;
+  @include dFlex($jc: space-between);
+  padding-top: 80px;
+  padding-bottom: 30px;
 
-    h1 {
-        @include font($fs: 61px, $fw: 700);
-    }
+  h1 {
+    @include font($fs: 61px, $fw: 700);
+  }
 
-    .close {
-        display: none;
-    }
+  .close {
+    display: none;
+  }
 }
 
+/*linkes Div*/
 .content {
-    @include dFlex($ai: flex-start, $g: 50px);
+  @include dFlex($ai: flex-start, $g: 50px);
+  flex-direction: column;
+
+  .title_field {
+    @include dFlex($ai: flex-start, $g: 10px);
     flex-direction: column;
+    width: 440px;
 
-    .title_field {
-        @include dFlex($ai: flex-start, $g: 10px);
-        flex-direction: column;
-        width: 440px;
+    .title {
+      @include font($fs: 20px, $fw: 400);
+      height: 24px;
 
-        .title {
-            @include font($fs: 20px, $fw: 400);
-            height: 24px;
-
-            span {
-                color: $red;
-            }
-        }
-
-        .input {
-            border: 1px solid;
-            border-color: $light_gray;
-            border-radius: 10px;
-            height: 48px;
-            width: 100%;
-
-            &::placeholder {
-                @include font($fs: 20px, $fw: 400);
-                color: $light_gray;
-                padding-top: 12px;
-                padding-left: 21px;
-            }
-        }
-
+      span {
+        color: $red;
+      }
     }
 
-    .description_field {
-        @include dFlex($ai: flex-start, $g: 10px);
-        flex-direction: column;
-        width: 440px;
+    .input {
+      border: 1px solid;
+      border-color: $light_gray;
+      border-radius: 10px;
+      height: 48px;
+      width: 100%;
 
-        .title {
-            @include font($fs: 20px, $fw: 400);
-            height: 24px;
+      &::placeholder {
+        @include font($fs: 20px, $fw: 400);
+        color: $light_gray;
+        padding-top: 12px;
+        padding-left: 21px;
+      }
+    }
+  }
 
-            >span {
-                color: $red;
-            }
-        }
+  .description_field {
+    @include dFlex($ai: flex-start, $g: 10px);
+    flex-direction: column;
+    width: 440px;
 
-        .input {
-            border: 1px solid;
-            border-color: $light_gray;
-            border-radius: 10px;
-            height: 120px;
-            width: 100%;
+    .title {
+      @include font($fs: 20px, $fw: 400);
+      height: 24px;
 
-            &::placeholder {
-                @include font($fs: 20px, $fw: 400);
-                color: $light_gray;
-                padding-top: 18px;
-                padding-left: 16px;
-            }
-        }
+      > span {
+        color: $red;
+      }
     }
 
-    .assigned_field {
-        @include dFlex($ai: flex-start, $g: 10px);
-        flex-direction: column;
-        width: 440px;
+    .input {
+      border: 1px solid;
+      border-color: $light_gray;
+      border-radius: 10px;
+      height: 120px;
+      width: 100%;
 
-        .title {
-            @include font($fs: 20px, $fw: 400);
-            height: 48px;
-            width: 100%;
-            border: 1px solid;
-            border-color: $light_gray;
-            border-radius: 10px;
-            padding-right: 10px;
-        }
+      &::placeholder {
+        @include font($fs: 20px, $fw: 400);
+        color: $light_gray;
+        padding-top: 18px;
+        padding-left: 16px;
+      }
     }
+  }
+
+  .assigned_field {
+    @include dFlex($ai: flex-start, $g: 10px);
+    flex-direction: column;
+    width: 440px;
+
+    .title {
+      @include font($fs: 20px, $fw: 400);
+      height: 48px;
+      width: 100%;
+      border: 1px solid;
+      border-color: $light_gray;
+      border-radius: 10px;
+      padding-right: 10px;
+    }
+  }
 }
 
+/*Trennlinie*/
+.line {
+  width: 2px;
+  background-color: $light_gray;
+  height: 50vh;
+  min-height: 300px;
+  max-height: 600px;
+}
 
-
+/*Rechtes Div*/
 .right {
-    @include dFlex($ai: flex-start, $g: 16px);
-    flex-direction: column;
+  @include dFlex($ai: flex-start, $g: 40px);
+  flex-direction: column;
+  width: 30.5vw;
+  max-width: 587px;
 }
 
-// .date-input {
-//   position: relative;
-//   display: inline-block;
-// }
+#dueDate {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
-// .date-input .icon {
-//   position: absolute;
-//   right: 10px;
-//   top: 50%;
-//   transform: translateY(-50%);
-//   pointer-events: none; /* Damit der Input weiterhin klickbar ist */
-// }
-
-.date-input input {
-    background: url("./../../../../assets/img/icons/add_task.svg") no-repeat right 10px center;
-    background-size: 20px;
-
-
-    .assigned_field {
-        @include dFlex($ai: flex-start, $g: 10px);
-        flex-direction: column;
-        width: 440px;
-
-        .title {
-            @include font($fs: 20px, $fw: 400);
-            height: 48px;
-            width: 100%;
-            border: 1px solid;
-            border-color: $light_gray;
-            border-radius: 10px;
-            padding-right: 10px;
-        }
-    }
+  background-image: url("./../../../../assets/img/icons/add_task.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-right: 100px;
+  cursor: pointer;
 }
 
+#dueDate::-moz-date-picker-arrow {
+  display: none;
+}
 
 .choice {
-    @include dFlex($ai: flex-start);
-    flex-direction: column;
+  @include dFlex($ai: flex-start, $g: 10px);
+  flex-direction: column;
+  width: 100%;
 
-    label {
-        font-size: 20px;
-    }
+  label {
+    font-size: 20px;
+  }
 
-    span {
-        color: $red;
-    }
+  span {
+    color: $red;
+  }
 
-    input {
-        border: 1px solid;
-        border-color: $light_gray;
-        border-radius: 10px;
-        height: 48px;
-        width: 100%;
-
-        &::placeholder {
-            @include font($fs: 20px, $fw: 400);
-            color: $light_gray;
-            padding-top: 18px;
-            padding-left: 16px;
-        }
-    }
-
+  input {
+    border: 1px solid;
+    border-color: $light_gray;
+    border-radius: 10px;
+    height: 48px;
     width: 100%;
+
+    &::placeholder {
+      @include font($fs: 20px, $fw: 400);
+      color: $light_gray;
+      padding-top: 18px;
+      padding-left: 16px;
+    }
+  }
+}
+
+.btn-section {
+  @include dFlex($jc: space-between);
+  width: 100%;
 }
 
 .btn-prio {
-    box-sizing: border-box;
-    padding: 16px;
-    font-size: 21px;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    background: $white;
-    box-shadow: 0px 0px 7px 4px rgba($black, 0.1);
+  box-sizing: border-box;
+  padding: 16px;
+  font-size: 21px;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+  background: $white;
+  box-shadow: 0px 0px 7px 4px rgba($black, 0.1);
 }
 
 .selectedHigh {
-    background: $special_red;
-    color: $white;
-    font-weight: 700;
+  background: $special_red;
+  color: $white;
+  font-weight: 700;
 }
 
 .selectedMedium {
-    background: $darker_orange;
-    color: $white;
-    font-weight: 700;
+  background: $darker_orange;
+  color: $white;
+  font-weight: 700;
 }
 
 .selectedLow {
-    background: $light_green;
-    color: $white;
-    font-weight: 700;
+  background: $light_green;
+  color: $white;
+  font-weight: 700;
+}
+
+.submit-section {
+  grid-column: span 3;
+  width: 100%;
+  @include dFlex($jc: space-between);
 }
