--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -28,14 +28,14 @@
         </div>
 
         <div class="assigned_field">
-          <select class="title" name="assigned_field" id="assigned_field">
+          <select name="assigned_field" id="assigned_field">
             <option value="">Select contacts to assign</option>
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-            <option value="hamster">Hamster</option>
-            <option value="parrot">Parrot</option>
-            <option value="spider">Spider</option>
-            <option value="goldfish">Goldfish</option>
+            <option value="">Anton Mayer</option>
+            <option value="">Anja Schulz</option>
+            <option value="">Benedikt Ziegler</option>
+            <option value="">David Eisenberg</option>
+            <option value="">Eva Fischer</option>
+            <option value="">Emmanuel Mauer</option>
           </select>
         </div>
       </div>
