--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,5 @@ a {
   background: #A8A8A8;
   border-radius: 4px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
