--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -12,7 +12,6 @@ form {
   @include dFlex($jc: space-between);
   flex-direction: column;
   height: calc(100vh - 91px - 190px - 80px);
-
 }
 
 .fill-in-area {
@@ -78,7 +77,7 @@ form {
       @include font($fs: 20px, $fw: 400);
       height: 24px;
 
-      >span {
+      > span {
         color: $red;
       }
     }
@@ -143,7 +142,7 @@ form {
   padding-left: 16px;
 
   color: $light_gray;
-  @include font($fs:20px, $fw:400);
+  @include font($fs: 20px, $fw: 400);
 
   background-image: url("./../../../../assets/img/icons/add_task.svg");
   background-repeat: no-repeat;
@@ -190,11 +189,6 @@ form {
 .btn-section {
   @include dFlex($jc: space-between);
   width: 100%;
-
-  div {
-    width: 20px;
-    height: 15px;
-  }
 }
 
 .btn-prio {
@@ -209,31 +203,65 @@ form {
   box-shadow: 0px 0px 7px 1px rgba($black, 0.1);
 }
 
+.arrow-up,
+.equal,
+.arrow-down {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 20px;
+  height: 15px;
+  margin-left: 16px;
+}
+
 .arrow-up {
+  background: url("./../../../../assets/img/icons/arrow_up_red.svg");
 }
 
 .equal {
+  background: url("./../../../../assets/img/icons/equal_orange.svg");
+  background-repeat: no-repeat;
 }
 
 .arrow-down {
+  background: url("./../../../../assets/img/icons/arrow_down_green.svg");
 }
+
+
+
+
+
 
 .selectedHigh {
   background: $special_red;
   color: $white;
   font-weight: 700;
+
+  div{
+    background: url("./../../../../assets/img/icons/arrow_up_white.svg");
+  }
 }
 
 .selectedMedium {
   background: $darker_orange;
   color: $white;
   font-weight: 700;
+
+  div{
+    background: url("./../../../../assets/img/icons/equal_white.svg");
+    background-repeat: no-repeat;
+  }
 }
 
 .selectedLow {
   background: $light_green;
   color: $white;
   font-weight: 700;
+
+  div{
+    background: url("./../../../../assets/img/icons/arrow_down_white.svg");
+  }
+
 }
 
 #taskType {
@@ -248,13 +276,11 @@ form {
 }
 
 /* Submit und Clear oder Cancel Button*/
-.submit-section {  
+.submit-section {
   width: 100%;
   @include dFlex($jc: space-between);
 
-
-  >p span{
+  > p span {
     color: $red;
   }
 }
-
