--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -26,6 +26,8 @@ $black: rgba(0, 0, 0, 1);
 $white: rgba(255, 255, 255, 1);
 $gray: rgba(168, 168, 168, 1);
 $light_gray: rgba(209, 209, 209, 1);
+$mid_gray: rgba(231, 231, 231, 1);
+$blueish_gray: rgba(66, 82, 110, 1);
 $dark_dark_blue: rgba(9, 25, 49, 1);
 $dark_blue: rgba(42, 54, 71, 1);
 $light_blue: rgba(41, 171, 226, 1);
