--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -2,7 +2,7 @@
   <div class="board_header">
     <div class="board_header_left">
       <h1>Board</h1>
-      <app-single-task></app-single-task>
+      <!-- <app-single-task></app-single-task> -->
     </div>
     <div class="board_header_right">
       <div class="input_field">
