added: DBList cennection

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -104,8 +104,8 @@
       </p>
 
       <div>
-        <button (click)="test()">TEST</button>
-        <button (click)="test()">TEST</button>
+        <!-- <button (click)="test()">TEST</button>
+        <button (click)="test()">TEST</button> -->
       </div>
     </div>
   </form>
